# recipe-suggester-ai-agent-test-automation

./: Jenkinsfile  docker-compose.development.yaml  docker-compose.yaml
client/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  globals.css  router.tsx
client/src/components/: DynamicListInput.tsx  RecipeCard.tsx  ThemeModeToggle.tsx
client/src/components/ui/: input.tsx  sonner.tsx
client/src/constants/form-schemas/: core.ts
client/src/context/: ThemeContext.tsx
client/src/hooks/core/: useRecipes.ts
client/src/routes/: __root.tsx  index.tsx
client/src/services/: CoreService.ts
client/src/services/core-services/: RecipeService.ts  axiosInstance.ts
client/src/types/: core-types.ts
robot-tests/: .dockerignore  .env.example  .gitignore  Dockerfile  load_env.py  pyproject.toml  run_tests.sh  webdriver_setup.py
robot-tests/results/: log.html  output.xml  report.html
robot-tests/results/pabot_results/0/: output.xml  playwright-log.txt  robot_stdout.out
robot-tests/tests/resources/: helpers.robot  recipe_suggestions_resources.robot
robot-tests/tests/suites/: recipe_suggestions.robot
robot-tests/tests/variables/: base.robot
server/: Dockerfile  main.py  pyproject.toml
server/app/: __init__.py
server/app/agents/: recipe_suggester.py
server/app/agents/recipe_suggester/: agent.py  interfaces.py  models.py
server/app/api/routers/: recipes.py
web-server/: Dockerfile
web-server/conf/: default.conf  default.development.conf
